--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "paper": "^0.12.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
